Fix mhlo bazel rule name

--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -464,7 +464,7 @@ cc_library(
         ":TorchMLIRConversionPassesIncGen",
         ":TorchMLIRTorchConversionDialect",
         ":TorchMLIRConversionUtils",
-        "@mlir-hlo//:hlo",
+        "@mlir-hlo//:mlir_hlo",
         "@llvm-project//mlir:Dialect"
     ]
 )
