[Fix bazel] Add recently added torch->mhlo conversion pass to bazel

--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -451,6 +451,7 @@ cc_library(
         "lib/Conversion/TorchToMhlo/BasicOp.cpp",
         "lib/Conversion/TorchToMhlo/GatherOp.cpp",
         "lib/Conversion/TorchToMhlo/ViewLikeOps.cpp",
+        "lib/Conversion/TorchToMhlo/ReductionOp.cpp",
         "lib/Conversion/TorchToMhlo/MhloLegalizeUtils.h",
         "lib/Conversion/TorchToMhlo/PopulatePatterns.h",
         "lib/Conversion/PassDetail.h",
