torch_mlir.compile: Allow ignoring traced shapes
In some cases, users know that a traced graph is valid for a wider set
of shapes than they originally traced it with. Provide an option for
users to ignore the shapes in the traced graph when they know it is
legal.

Fixes #997

--- a/python/torch_mlir/dialects/torch/importer/jit_ir/csrc/CMakeLists.txt
+++ b/python/torch_mlir/dialects/torch/importer/jit_ir/csrc/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(TorchMLIRJITIRImporter ${LIBRARY_TYPE}
   function_importer.cpp
   module_builder.cpp
   node_importer.cpp
+  import_options_pybind.cpp
   ivalue_importer.cpp
   init_python_bindings.cpp
   torch_to_mlir_utils.cpp
