--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -450,6 +450,7 @@ cc_library(
         "lib/Conversion/TorchToMhlo/MhloLegalizeUtils.cpp",
         "lib/Conversion/TorchToMhlo/BasicOp.cpp",
         "lib/Conversion/TorchToMhlo/GatherOp.cpp",
+        "lib/Conversion/TorchToMhlo/Linear.cpp",
         "lib/Conversion/TorchToMhlo/ViewLikeOps.cpp",
         "lib/Conversion/TorchToMhlo/ReductionOp.cpp",
         "lib/Conversion/TorchToMhlo/MhloLegalizeUtils.h",
