--- a/lib/Conversion/TorchToMhlo/CMakeLists.txt
+++ b/lib/Conversion/TorchToMhlo/CMakeLists.txt
@@ -3,6 +3,7 @@ add_mlir_conversion_library(TorchMLIRTorchToMhlo
   MhloLegalizeUtils.cpp
   BasicOp.cpp
   GatherOp.cpp
+  Linear.cpp
   ViewLikeOps.cpp
   ReductionOp.cpp
 
