fix bazel build and delete 'Op' suffix in filename

--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -453,6 +453,7 @@ cc_library(
         "lib/Conversion/TorchToMhlo/Linear.cpp",
         "lib/Conversion/TorchToMhlo/ViewLikeOps.cpp",
         "lib/Conversion/TorchToMhlo/ReductionOp.cpp",
+        "lib/Conversion/TorchToMhlo/Pooling.cpp",
         "lib/Conversion/TorchToMhlo/MhloLegalizeUtils.h",
         "lib/Conversion/TorchToMhlo/PopulatePatterns.h",
         "lib/Conversion/PassDetail.h",
