--- a/lib/Conversion/TorchToMhlo/CMakeLists.txt
+++ b/lib/Conversion/TorchToMhlo/CMakeLists.txt
@@ -6,7 +6,7 @@ add_mlir_conversion_library(TorchMLIRTorchToMhlo
   Linear.cpp
   ViewLikeOps.cpp
   ReductionOp.cpp
-  PoolingOp.cpp
+  Pooling.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Conversion/TorchToMhlo
