--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -87,7 +87,8 @@ declare_mlir_python_extension(TorchMLIRPythonExtensions.Main
 if(TORCH_MLIR_ENABLE_LTC)
   add_subdirectory(torch_mlir/csrc/base_lazy_backend)
 endif()
-# Reference backend has a separate check for TORCH_MLIR_ENABLE_LTC.
+# Reference backend has a separate check for TORCH_MLIR_ENABLE_LTC, since it
+# generates a dummy Python library when disabled.
 add_subdirectory(torch_mlir/csrc/reference_lazy_backend)
 
 ################################################################################
