Rename TorchToStd pass as TorchToArith
All the converters in this pass appear to create ops from the
arith dialect. Hence the full rename.

Fix GH Issue #409.

--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(TorchToLinalg)
 add_subdirectory(TorchToSCF)
-add_subdirectory(TorchToStd)
+add_subdirectory(TorchToArith)
 add_subdirectory(TorchToTosa)
 if(TORCH_MLIR_ENABLE_MHLO)
   add_subdirectory(TorchToMhlo)
@@ -11,7 +11,7 @@ add_subdirectory(Utils)
 # TODO: Automate this with add_torch_mlir_conversion_library.
 set(linked_libs TorchMLIRTorchToLinalg
                 TorchMLIRTorchToSCF
-                TorchMLIRTorchToStd
+                TorchMLIRTorchToArith
                 TorchMLIRTorchToTosa
                 TorchMLIRTorchToTMTensor
                 TorchMLIRConversionUtils)
