--- a/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -6,7 +6,7 @@ set(LinkedLibs  MLIRIR
                 TorchMLIRTorchPasses
                 TorchMLIRTorchToLinalg
                 TorchMLIRTorchToTMTensor
-                TorchMLIRTorchToStd
+                TorchMLIRTorchToArith
                 TorchMLIRTorchToSCF
                 MLIRMemRefTransforms)
                 
