--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,9 @@ setuptools
 cmake
 ninja
 
+# Workaround for what should be a torch dep
+# See discussion in #1174
+pyyaml
+
 # Test Requirements
 pillow
