--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -27,6 +27,10 @@ jobs:
           # Disable M1 builds until https://github.com/llvm/torch-mlir/issues/1094 is fixed
           - targetarch: arm64
             os: ubuntu-22.04
+          - targetarch: arm64
+            llvmtype: binary
+          - targetarch: arm64
+            llvmtype: source
           # macOS we only do source builds to reduce options
           - os: macos-12
             torch-binary: OFF
@@ -74,7 +78,7 @@ jobs:
     - name: Configure llvm-binary-torch-src-or-binary
       # Should be the fastest builds for CI and fails fast
       # OSX CMake flags are ignored on Linux
-      if: ${{  matrix.llvmtype == 'binary' AND matrix.targetarch == 'x86_64' }}
+      if: matrix.llvmtype == 'binary'
       run: |
         cd $GITHUB_WORKSPACE
         cmake -GNinja -Bbuild \
@@ -99,7 +103,7 @@ jobs:
     - name: Configure llvm-source-out-of-tree-torch-src-or-binary
       # This build takes a while but is expected to almost always be cached.
       # A cache invalidation occurs when the committed LLVM version is changed.
-      if: ${{  matrix.llvmtype == 'source' AND matrix.targetarch == 'x86_64' }}
+      if: matrix.llvmtype == 'source'
       run: |
         cd $GITHUB_WORKSPACE
         cmake -GNinja -Bllvm-build \
