--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -265,6 +265,7 @@ gentbl_cc_library(
             [
                 "-gen-pass-decls",
                 "-DTORCH_MLIR_ENABLE_MHLO",
+		"-DTORCH_MLIR_ENABLE_MHLO_TRUNC_DIMSIZE_TO_I32",
             ],
             "include/torch-mlir/Conversion/Passes.h.inc",
         ),
@@ -416,6 +417,7 @@ cc_library(
         "lib/Conversion/TorchToMhlo/*.cpp",
     ]),
     hdrs = glob(["include/torch-mlir/Conversion/TorchToMhlo/*.h"]),
+    copts = ['-DTORCH_MLIR_ENABLE_MHLO_TRUNC_DIMSIZE_TO_I32'],
     strip_include_prefix = "include",
     deps = [
         ":TorchMLIRConversionPassesIncGen",
