--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -158,7 +158,9 @@ jobs:
       if: ${{ matrix.os-arch == 'ubuntu-x86_64' && matrix.llvm-build == 'in-tree' }}
       run: |
         export PYTHONPATH="$GITHUB_WORKSPACE/build/tools/torch-mlir/python_packages/torch_mlir"
-        python -m e2e_testing.torchscript.main --config=refbackend -v -s
+        sudo apt-get install gdb
+        #python -m e2e_testing.torchscript.main --config=refbackend -v -s
+        gdb --batch -q python -ex 'run' -ex 'back' --args -m e2e_testing.torchscript.main --config=refbackend -v -s
 
 
     # - name: Run eager_mode e2e integration tests
