--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -160,7 +160,7 @@ jobs:
         export PYTHONPATH="$GITHUB_WORKSPACE/build/tools/torch-mlir/python_packages/torch_mlir"
         sudo apt-get install gdb
         #python -m e2e_testing.torchscript.main --config=refbackend -v -s
-        gdb --batch -q python -ex 'run' -ex 'back' --args -m e2e_testing.torchscript.main --config=refbackend -v -s
+        gdb --batch -q -ex 'run' -ex 'back' --args python -m e2e_testing.torchscript.main --config=refbackend -v -s
 
 
     # - name: Run eager_mode e2e integration tests
