build: update llvm tag to 00d648bd
 - Update MHLO commit to build with LLVM commit hash 00d648bd
 - Update TorchToMhlo code to work with Stablehlo
 - Re-enabled two failing TOSA tests, thus resolving Github Issue #1231

--- a/lib/Conversion/TorchToMhlo/CMakeLists.txt
+++ b/lib/Conversion/TorchToMhlo/CMakeLists.txt
@@ -13,7 +13,6 @@ add_mlir_conversion_library(TorchMLIRTorchToMhlo
 
   DEPENDS
   MhloDialect
-  ChloDialect
   MhloToLinalg
   MLIRMhloPassIncGen
   TorchMLIRConversionPassIncGen
@@ -22,11 +21,12 @@ add_mlir_conversion_library(TorchMLIRTorchToMhlo
   Core
 
   LINK_LIBS PUBLIC
+  ChloOps
   MLIRIR
   MLIRPass
   MhloDialect
-  ChloDialect
   MhloToLinalg
+  StablehloBase
   TorchMLIRTorchDialect
 )
 
